--- a/html/home.html
+++ b/html/home.html
@@ -8,19 +8,32 @@
       href="https://nomadcoders.co/m.png"
     />
     <title>Welcome! - My first website</title>
+    <link href="styles.css" rel="stylesheet" />
+    <style>
+      .btn {
+        padding: 5px;
+        border-radius: 5px;
+      }
+      .teal {
+        background-color: teal;
+      }
+      .hello {
+        background-color: tomato;
+      }
+    </style>
     <meta charset="utf-8" />
     <meta name="description" content="This is my website" />
   </head>
 
   <body>
-    <header>
-      <h1>Aiden Times</h1>
-    </header>
-    <main>
-      <span>Hello!</span>
-      <p></p>
-    </main>
-
-    <footer>&copy; 2021 N.C</footer>
+    <span class="btn hello">hello</span>
+    <span class="btn teal">hello</span>
+    <span class="btn hello">hello</span>
+    <span class="btn teal">hello</span>
+    <span class="btn hello">hello</span>
+    <span class="btn teal">hello</span>
+    <span class="btn hello">hello</span>
+    <span class="btn teal">hello</span>
+    <span class="btn hello">hello</span>
   </body>
 </html>
