Nav Bar practice

--- a/Chat_praject/friends.html
+++ b/Chat_praject/friends.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Let's Think about the fancier title -->
-    <title>Welcome to ADD Talk</title>
+    <title>Friends Screen - ADD Talk</title>
   </head>
   <body>
     <div class="status-bar">
@@ -27,25 +27,30 @@
       </div>
     </div>
 
-    <header class="welcome-header">
-      <h1 class="welcome-header__title">Welcome to ADD Talk</h1>
-      <p class="welcome-header__text">
-        If you have a ADD Talk Account, log in with your email or phone number.
-      </p>
-    </header>
-
-    <!-- Will add required -->
-    <form action="friends.html" method="get" id="login-form">
-      <input
-        name="username"
-        required
-        type="text"
-        placeholder="Email or phone number"
-      />
-      <input name="password" required type="password" placeholder="Password" />
-      <input type="submit" value="Log In" />
-      <a href="#">Find ADD Account or Password</a>
-    </form>
+    <nav class="nav">
+      <ul class="nav__list">
+        <li class="nav__btn">
+          <a class="nav__link" href="friends.html"
+><i class="fas fa-user fa-2x"></i
+          ></a>
+        </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="#">
+              <span class="nav__notification">1</span>
+        <i class="far fa-comment fa-2x"></i></a>
+        </li class="nav__btn">
+        <li>
+          <a class="nav__link" href="#">
+              <i class="fas fa-search fa-2x"></i>
+        </a>
+        </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="#">
+            <span class="nav__ellipsis__dot"></span>  
+            <i class="fas fa-ellipsis-h fa-2x"></i></a>
+        </li>
+      </ul>
+    </nav>
 
     <script
       src="https://kit.fontawesome.com/f2ce00bbdb.js"
