--- a/html/best-color.html
+++ b/html/best-color.html
@@ -9,31 +9,31 @@
   </head>
   <body>
     <h1>The Best Colors</h1>
-        <div id="outside-div">
-            <div id="inside-tomato">
-                <div class="inside-white">
-                    <h2>Tomato</h2></br>
-                    <h4>#FF6347</h4>
-                </div>
-            </div>
-            <div id="inside-teal">
-                <div class="inside-white">
-                    <h2>Teal</h2></br>
-                    <h4>#008080</h4>
-                </div>
-            </div>
-            <div id="inside-burlywood">
-                <div class="inside-white">
-                    <h2>Burlywood</h2></br>
-                    <h4>#DEB887</h4>
-                </div>
-            </div>
-            <div id="inside-thistle">
-                <div class="inside-white">
-                    <h2>Thistle</h2></br>
-                    <h4>#D7BFD7</h4>
-                </div>
-            </div>
+    <div id="outside-div">
+      <div>
+        <div class="inside-white">
+          <h2>Tomato</h2>
+          <h4>#FF6347</h4>
         </div>
+      </div>
+      <div>
+        <div class="inside-white">
+          <h2>Teal</h2>
+          <h4>#008080</h4>
+        </div>
+      </div>
+      <div>
+        <div class="inside-white">
+          <h2>Burlywood</h2>
+          <h4>#DEB887</h4>
+        </div>
+      </div>
+      <div>
+        <div class="inside-white">
+          <h2>Thistle</h2>
+          <h4>#D7BFD7</h4>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
