--- a/Chat_praject/friends.html
+++ b/Chat_praject/friends.html
@@ -41,7 +41,47 @@
       <i class="fas fa-chevron-right fa-xs"></i>
     </a>
 
-    <div class="user-component"></div>
+    <main class="friends-screen">
+      <div class="user-components">
+        <div class="user-components__column">
+          <img
+            src="img/profile.jpg"
+            class="user-components__avatar user-components__avatar--xl"
+          />
+          <div class="user-components__text">
+            <h4 class="user-components__title">Aiden</h4>
+            <!-- <h4 class="user-components__subtitle">Blah Blah</h4> -->
+          </div>
+        </div>
+        <div class="user-components__column"></div>
+      </div>
+
+      <div class="friends-screen__channel">
+        <div class="friends-screen__channel-header">
+          <span>Channel</span>
+          <i class="fas fa-chevron-up fa-xs"></i>
+        </div>
+        <div class="user-components">
+          <div class="user-components__column">
+            <img
+              src="img/profile.jpg"
+              class="user-components__avatar user-components__avatar--sm"
+            />
+            <div class="user-components__text">
+              <h4
+                class="user-components__title user-components__title--not-bold"
+              >
+                Channel
+              </h4>
+              <!-- <h4 class="user-components__subtitle">Blah Blah</h4> -->
+            </div>
+          </div>
+          <div class="user-components__column">
+            <div><span>2</span> <i class="fas fa-chevron-right fa-xs"></i></div>
+          </div>
+        </div>
+      </div>
+    </main>
 
     <nav class="nav">
       <ul class="nav__list">
@@ -51,18 +91,18 @@
           </a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="#">
-            <span class="nav__notification">1</span>
+          <a class="nav__link" href="chats.html">
+            <span class="nav__notification badge">1</span>
             <i class="far fa-comment fa-2x"></i
           ></a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="#">
+          <a class="nav__link" href="find.html">
             <i class="fas fa-search fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="#">
+          <a class="nav__link" href="more.html">
             <span class="nav__ellipsis__dot"></span>
             <i class="fas fa-ellipsis-h fa-2x"></i>
           </a>
