--- a/html/music-display/music-display-practice.html
+++ b/html/music-display/music-display-practice.html
@@ -28,7 +28,7 @@
 
           <div class="status-bar__btn">
             <button>Shuffle</button>
-            <button>212,971</button>
+            <button><i class="fas fa-heart"></i>212,971</button>
           </div>
         </div>
       </section>
