--- a/Front_End_Project/Chat_App_Front_End/chats.html
+++ b/Front_End_Project/Chat_App_Front_End/chats.html
@@ -38,49 +38,52 @@
     </header>
 
     <main class="main-screen">
-      <div class="user-components">
-        <div class="user-components__column">
-          <img src="img/profile.jpg" class="user-components__avatar" />
-          <div class="user-components__text">
-            <h4 class="user-components__title">KungFu Panda</h4>
-            <h4 class="user-components__subtitle">
-              Bring your passion, let me teach you the KungFu
-            </h4>
+      <a href="chat.html">
+        <div class="user-components">
+          <div class="user-components__column">
+            <img src="img/profile.jpg" class="user-components__avatar" />
+            <div class="user-components__text">
+              <h4 class="user-components__title">KungFu Panda</h4>
+              <h4 class="user-components__subtitle">
+                Bring your passion, let me teach you the KungFu
+              </h4>
+            </div>
+          </div>
+          <div class="user-components__column">
+            <span class="user-components__time">21:22</span>
+            <div class="badge">1</div>
           </div>
         </div>
-        <div class="user-components__column">
-          <span class="user-components__time">21:22</span>
-          <div class="badge">1</div>
+        
+        <a href="chat.html">
+        <div class="user-components">
+          <div class="user-components__column">
+            <img src="img/light.jpg" class="user-components__avatar" />
+            <div class="user-components__text">
+              <h4 class="user-components__title">Aiden</h4>
+              <h4 class="user-components__subtitle">Hey, how's up to?</h4>
+            </div>
+          </div>
+          <div class="user-components__column">
+            <span class="user-components__time">09:22</span>
+            <div class="badge">97</div>
+          </div>
         </div>
-      </div>
 
-      <div class="user-components">
-        <div class="user-components__column">
-          <img src="img/light.jpg" class="user-components__avatar" />
-          <div class="user-components__text">
-            <h4 class="user-components__title">Aiden</h4>
-            <h4 class="user-components__subtitle">Hey, how's up to?</h4>
+        <div class="user-components">
+          <div class="user-components__column">
+            <img src="img/sleep.jpg" class="user-components__avatar" />
+            <div class="user-components__text">
+              <h4 class="user-components__title">HJ</h4>
+              <h4 class="user-components__subtitle">I'm sleeping</h4>
+            </div>
+          </div>
+          <div class="user-components__column">
+            <span class="user-components__time">12:58</span>
+            <!-- <div class="badge">1</div> -->
           </div>
         </div>
-        <div class="user-components__column">
-          <span class="user-components__time">09:22</span>
-          <div class="badge">97</div>
-        </div>
-      </div>
-
-      <div class="user-components">
-        <div class="user-components__column">
-          <img src="img/sleep.jpg" class="user-components__avatar" />
-          <div class="user-components__text">
-            <h4 class="user-components__title">HJ</h4>
-            <h4 class="user-components__subtitle">I'm sleeping</h4>
-          </div>
-        </div>
-        <div class="user-components__column">
-          <span class="user-components__time">12:58</span>
-          <!-- <div class="badge">1</div> -->
-        </div>
-      </div>
+      </a>
     </main>
 
     <nav class="nav">
