--- a/Front_End_Project/Chat_App_Front_End/more.html
+++ b/Front_End_Project/Chat_App_Front_End/more.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Let's Think about the fancier title -->
-    <title>Friends Screen - ADD Talk</title>
+    <title>More - ADD Talk</title>
   </head>
   <body>
     <div class="status-bar">
@@ -28,20 +28,20 @@
     </div>
 
     <header class="screen-header">
-      <h1 class="screen-header__title">Friends</h1>
+      <h1 class="screen-header__title">More</h1>
       <div class="screen-header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
         <span><i class="fas fa-music fa-lg"></i></span>
-        <span><i class="fas fa-cog fa-lg"></i></span>
+        <span class="screen-header__dot">
+          <span class="dot__inside"></span>
+          <span
+            ><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a
+          ></span>
+        </span>
       </div>
     </header>
 
-    <a id="friends-display-link">
-      <i class="fas fa-info-circle"></i>Friends' Names Display
-      <i class="fas fa-chevron-right fa-xs"></i>
-    </a>
-
-    <main class="friends-screen">
+    <main class="main-screen more-screen">
       <div class="user-components">
         <div class="user-components__column">
           <img
@@ -50,34 +50,64 @@
           />
           <div class="user-components__text">
             <h4 class="user-components__title">Aiden</h4>
-            <!-- <h4 class="user-components__subtitle">Blah Blah</h4> -->
+            <h4 class="user-components__subtitle">
+              +1-703 555-5555 <i class="fas fa-exclamation exclamation"></i>
+            </h4>
           </div>
         </div>
-        <div class="user-components__column"></div>
+        <div class="user-components__column">
+          <i class="far fa-comment-alt fa-2x"></i>
+        </div>
+      </div>
+      <div class="icon-row">
+        <div class="icon-row__icon">
+          <i class="far fa-calendar"></i>
+          <span>Cakendar</span>
+        </div>
+        <div class="icon-row__icon">
+          <i class="far fa-smile-wink"></i>
+          <span>Emotions</span>
+        </div>
+        <div class="icon-row__icon">
+          <i class="fas fa-paint-roller"></i>
+          <span>Themes</span>
+        </div>
+        <div class="icon-row__icon">
+          <i class="fas fa-user"></i>
+          <span>Account</span>
+        </div>
+        <div class="icon-row__icon">
+          <i class="fas fa-user"></i>
+          <span>Account</span>
+        </div>
+        <div class="icon-row__icon">
+          <i class="fas fa-user"></i>
+          <span>Account</span>
+        </div>
       </div>
 
-      <div class="friends-screen__channel">
-        <div class="friends-screen__channel-header">
-          <span>Channel</span>
-          <i class="fas fa-chevron-up fa-xs"></i>
-        </div>
-        <div class="user-components">
-          <div class="user-components__column">
-            <img
-              src="img/profile.jpg"
-              class="user-components__avatar user-components__avatar--sm"
-            />
-            <div class="user-components__text">
-              <h4
-                class="user-components__title user-components__title--not-bold"
-              >
-                Channel
-              </h4>
-              <!-- <h4 class="user-components__subtitle">Blah Blah</h4> -->
+      <div class="more-suggestions">
+        <h4 class="more-suggestions__title">Suggestions</h4>
+        <div class="more-suggestions__icons">
+          <div class="more-suggestions__icon">
+            <div class="more-suggestions__icon-image">
+              <i class="fas fa-quote-right"></i>
             </div>
+            <span class="more-suggestions__icon-text">ADD Story</span>
           </div>
-          <div class="user-components__column">
-            <div><span>2</span> <i class="fas fa-chevron-right fa-xs"></i></div>
+
+          <div class="more-suggestions__icon">
+            <div class="more-suggestions__icon-image">
+              <i class="fas fa-quote-right"></i>
+            </div>
+            <span class="more-suggestions__icon-text">ADD Story</span>
+          </div>
+
+          <div class="more-suggestions__icon">
+            <div class="more-suggestions__icon-image">
+              <i class="fas fa-quote-right"></i>
+            </div>
+            <span class="more-suggestions__icon-text">ADD Story</span>
           </div>
         </div>
       </div>
@@ -87,7 +117,7 @@
       <ul class="nav__list">
         <li class="nav__btn">
           <a class="nav__link" href="friends.html">
-            <i class="fas fa-user fa-2x"></i>
+            <i class="far fa-user fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
@@ -110,9 +140,6 @@
       </ul>
     </nav>
 
-    <div id="splash-screen">
-      <i class="fas fa-comment fa-2x"></i>
-    </div>
     <script
       src="https://kit.fontawesome.com/f2ce00bbdb.js"
       crossorigin="anonymous"
