--- a/Front_End_Project/Chat_App_Front_End/chat.html
+++ b/Front_End_Project/Chat_App_Front_End/chat.html
@@ -81,6 +81,10 @@
       </div>
     </form>
 
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/f2ce00bbdb.js"
       crossorigin="anonymous"
