--- a/Front_End_Project/Chat_App_Front_End/friends.html
+++ b/Front_End_Project/Chat_App_Front_End/friends.html
@@ -110,6 +110,10 @@
       </ul>
     </nav>
 
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
+
     <div id="splash-screen">
       <i class="fas fa-comment fa-2x"></i>
     </div>
