--- a/Front_End_Project/Chat_App_Front_End/index.html
+++ b/Front_End_Project/Chat_App_Front_End/index.html
@@ -47,6 +47,10 @@
       <a href="#">Find ADD Account or Password</a>
     </form>
 
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/f2ce00bbdb.js"
       crossorigin="anonymous"
