--- a/Front_End_Project/Chat_App_Front_End/settings.html
+++ b/Front_End_Project/Chat_App_Front_End/settings.html
@@ -91,6 +91,10 @@
       </ul>
     </nav>
 
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/f2ce00bbdb.js"
       crossorigin="anonymous"
