--- a/Front_End_Project/Chat_App_Front_End/friends.html
+++ b/Front_End_Project/Chat_App_Front_End/friends.html
@@ -111,7 +111,7 @@
     </nav>
 
     <div id="no-mobile">
-      <span>Your screen is too big ㅠㅠ</span>
+      <span>Your screen is too big</span>
     </div>
 
     <div id="splash-screen">
