--- a/Front_End_Project/Chat_App_Front_End/more.html
+++ b/Front_End_Project/Chat_App_Front_End/more.html
@@ -141,7 +141,7 @@
     </nav>
 
     <div id="no-mobile">
-      <span>Your screen is too big ㅠㅠ</span>
+      <span>Your screen is too big</span>
     </div>
 
     <script
